--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -2,6 +2,6 @@
 <resources>
     <string name="app_name">erudit</string>
     <string name="title_activity_main">erudit</string>
-    <string name="package_name">org.univ.compostmap</string>
-    <string name="custom_url_scheme">org.univ.compostmap</string>
+    <string name="package_name">com.example.app</string>
+    <string name="custom_url_scheme">com.example.app</string>
 </resources>
